<?xml version="1.0"?>
<package>
  <name>p2os_driver</name>
  <version>0.1.0</version>
  <description>The p2os_driver package provides a ROS interface for 
               mobile robots which use the P2OS Protocol.</description>
  <maintainer email="dereck@gmail.com">Dereck Wonnacott</maintainer>
  <license>GPLv2</license>
  
  <url type="website">http://ros.org/wiki/p2os</url>
  <url type="repository">https://github.com/dawonn/ros-p2os-driver</url>
  <url type="bugtracker">https://github.com/dawonn/ros-p2os-driver/issues</url>
  
  <author email="dereck@gmail.com">Dereck Wonnacott</author>
  <author email="dfseifer@usc.edu">David Feil-Seifer</author>
  <author>Brian Gerkey</author>
  <author>Kasper Stoy</author>
  <author>Richard Vaughan</author>
  <author>Andrew Howard</author>
  <author>Tucker Hermans</author>
  <author>ActivMedia Robotics LLC</author>
  <author>MobileRobots Inc.</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>angles</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>angles</run_depend>

</package>
